fixed scrollbar issue

--- a/style.css
+++ b/style.css
@@ -2,6 +2,11 @@ body {
     background: white !important;
 }
 
+html, body {
+    max-width: 100%;
+    overflow-x: hidden;
+}
+
 .navbar {
     background: linear-gradient(55deg, #ffaa32 0%, #ff673c 100%)
 }
